# ai-commit

./: AI_Commit_Project_README.md
.github/workflows/: rust.yml
backend/: .gitignore  Cargo.toml  backend_README.md  install.sh
backend/src/: ai_model.rs  main.rs
vscode-ai-commit/: .gitignore  frontend_README.md  package-lock.json  package.json  tsconfig.json  vscode-ai-commit-1.0.0.vsix
vscode-ai-commit/src/: extension.ts
